# Comani

./: .env.example  .gitignore  README.md  pyproject.toml
comani/: __init__.py  config.py  mock_comfyui.py  server.py
comani/cli/: cmd_chat.py  cmd_execute.py  cmd_health.py  cmd_model.py  cmd_preset.py  cmd_queue.py  cmd_workflow.py  commands.py  download_model.py
comani/core/: __init__.py  client.py  dependency.py  downloader.py  engine.py  executor.py  model_pack.py  preset.py  workflow.py
comani/core/downloader/: model.py
comani/model/: download.py  model_dependency.py  model_downloader.py  model_pack.py
comani/models/: download.py
comani/models/sdxl/: anikawa.py  anikawaxl.yml  boleromix.py  boleromix.yml  dupli-cat-flat-illustrious.yml  dupli-cat-flat-obsession.yml  dupli_cat_flat.py  hassaku.py  hassaku.yml  lora_misc.yml  lora_slider.yml  plant_milk.py  plant_milk.yml  sdxls.yml
comani/models/upscale/: realesrgan_x4plus_anime_6b.py  realesrgan_x4plus_anime_6b.yml
comani/models/wan/: wan22_animate.py  wan22_animate.yml  wan22_i2v.py  wan22_i2v_fp8.yml  wan22_i2v_gguf.yml
comani/models/zimage/: z_image_turbo.py  z_image_turbo_bf16.yml  z_image_turbo_gguf.yml
comani/presets/: anikawaxl_girl.yml  cyberpunk_city.yml  flux_anime_girl.yml
comani/utils/: download.py  model_downloader.py
comani/utils/api/: civitai.py  hf.py
comani/utils/connection/: node.py  ssh.py
comani/utils/hf/: __init__.py
comani/workflows/: anikawaxl_with_5_loras.json  duplicat_flat.json  flux_dev_example.json  uh_wan-animate_v1.json
comfy_anime_pack/models/: README.md  __init__.py  download.py
comfy_anime_pack/models/sdxl/: anikawa.py  boleromix.py  (+3 more)
examples/models/: detection.yml  upscale.yml  wan.yml  zimage.yml
examples/presets/: anikawaxl_girl.yml  cyberpunk_city.yml  flux_anime_girl.yml
examples/workflows/: anikawaxl.json  anikawaxl_with_5_loras copy.json  anikawaxl_with_5_loras_new.json  wan22_best.json
scripts/: migrate_yml.py  pull.sh  push.sh  setup_remote.sh  sync.ps1
scripts/remote/: copy-workflows.sh  install.sh  start.sh
tests/: test_cli_model.py  test_dependency.py  test_model_pack.py
tests/functional/: test_connet_node.py  test_download.py  test_download_model.py
tests/integration/: test_connect_node.py  test_download.py  test_download_model.py  test_execute_preset.py
tools/model_downloader/: export_model_inventory.py  model_inventory_app.py
tools/photoprism/: delete.sh  install.sh  start.sh
workflows/: anikawaxl.json  duplicat_flat_exp.json  image_z_image_turbo_inpaint.json  kkw_zimage_i2ip.json  uh_wan-animate_motion_detector_multi_v1.json  wan22_flf2v_gguf.json
(+36 files in other folders)
